[package]
name = "termcast"
version = "0.1.0"
authors = ["mpostma <postma.marin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
nix = "0.17.0"
termion = "1.5.5"
bitflags = "1.2.1"
vte = "0.8.0"
structopt = { version = "0.3" }
tokio = { version = "0.3.5", features = ["full"] }
async-trait = "0.1.42"
